e2e/agic/backendhostname/output/httproute-default-contoso-ingress-contoso-com.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: contoso-ingress-contoso-com
  namespace: default
spec:
  hostnames:
  - contoso.com
  parentRefs:
  - name: alb-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: contoso-service
      port: 80
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: example.com
    matches:
    - path:
        type: Exact
        value: /
